native search work

--- a/src/css/site.css
+++ b/src/css/site.css
@@ -21,7 +21,7 @@
 @import "landing-page.css";
 @import "pagination.css";
 @import "header.css";
-@import "search.css";
+@import "magnolia-search.css";
 @import "footer.css";
 @import "highlight.css";
 @import "clipboard.css";
