--- a/src/partials/search.hbs
+++ b/src/partials/search.hbs
@@ -1,71 +1,3 @@
-<style>
-  .search-input-wrapper__icon {
-    opacity: 1;
-    transition: opacity 0.2s ease-in-out;
-  }
-
-  .search-input-wrapper.focused .search-input-wrapper__icon {
-    opacity: 0.25;
-  }
-</style>
-
-<div class="search-input-wrapper">
-  <button type="search" placeholder="" name="search" id="searchBar">
-  {{!-- <span class="search-input-wrapper__icon">
-    <p><i class="fa fa-search" aria-hidden="true"></i> <kbd>/</kbd></p>
-  </span> --}}
+<div class="mgnl-search-slot">
+  <div id="nativeSearch"></div>
 </div>
-
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-    var searchWrapper = document.querySelector('.search-input-wrapper');
-    var searchInput = document.getElementById('searchBar');
-    var searchIcon = document.querySelector('.search-input-wrapper__icon');
-
-    function focusSearchBar() {
-      searchWrapper.classList.add('focused');
-      searchInput.focus();
-    }
-
-    function unfocusSearchBar() {
-      searchWrapper.classList.remove('focused');
-      searchInput.blur();
-    }
-
-    searchIcon.addEventListener('click', function() {
-      searchBar.focus();
-    });
-
-    searchInput.addEventListener('focus', function() {
-      focusSearchBar();
-    });
-
-    searchInput.addEventListener('blur', function() {
-      unfocusSearchBar();
-    });
-
-    document.addEventListener('keydown', function(event) {
-      if (event.key === '/') {
-        event.preventDefault(); // Prevent the default '/' behavior (e.g., page search)
-        if (searchWrapper.classList.contains('focused')) {
-          unfocusSearchBar();
-        } else {
-          focusSearchBar();
-        }
-      } else if (event.key === 'Escape') {
-        unfocusSearchBar();
-      }
-    });
-  });
-</script>
-
-<script>
-
-  document.addEventListener('DOMContentLoaded', () => {
-  const placeholder = document.querySelector('.DocSearch-Button-Placeholder');
-  if (placeholder) {
-    placeholder.textContent = 'Search or Ask AI';
-  }
-});
-
-</script>
