--- a/src/css/site.css
+++ b/src/css/site.css
@@ -22,6 +22,7 @@
 @import "pagination.css";
 @import "header.css";
 @import "magnolia-search.css";
+@import "magnolia-ask-ai.css";
 @import "footer.css";
 @import "highlight.css";
 @import "clipboard.css";
