--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -105,6 +105,8 @@
       </a>
 
       {{> search}}
+    {{> ask-ai}}
+      {{> ask-ai}}
 
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
@@ -150,6 +152,7 @@
     </a>
 
     {{> search}}
+    {{> ask-ai}}
 
     <button class="navbar-burger" data-target="topbar-nav">
       <span></span>
@@ -195,6 +198,7 @@
     </a>
 
     {{> search}}
+    {{> ask-ai}}
 
     <button class="navbar-burger" data-target="topbar-nav">
       <span></span>
@@ -241,6 +245,7 @@
     </a>
 
     {{> search}}
+    {{> ask-ai}}
 
     <button class="navbar-burger" data-target="topbar-nav">
       <span></span>
@@ -286,6 +291,8 @@
       </a>
 
       {{> search}}
+    {{> ask-ai}}
+      {{> ask-ai}}
 
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
@@ -335,6 +342,8 @@
       </a>
 
       {{> search}}
+    {{> ask-ai}}
+      {{> ask-ai}}
 
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
@@ -397,6 +406,8 @@
       </a>
 
       {{> search}}
+    {{> ask-ai}}
+      {{> ask-ai}}
 
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
@@ -457,6 +468,8 @@
       </a>
 
       {{> search}}
+    {{> ask-ai}}
+      {{> ask-ai}}
 
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
@@ -518,6 +531,8 @@
       </a>
 
       {{> search}}
+    {{> ask-ai}}
+      {{> ask-ai}}
 
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
@@ -579,6 +594,8 @@
       </a>
 
       {{> search}}
+    {{> ask-ai}}
+      {{> ask-ai}}
 
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
@@ -640,6 +657,8 @@
       </a>
 
       {{> search}}
+    {{> ask-ai}}
+      {{> ask-ai}}
 
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
@@ -698,6 +717,8 @@
       </a>
 
       {{> search}}
+    {{> ask-ai}}
+      {{> ask-ai}}
 
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
@@ -756,6 +777,8 @@
       </a>
 
       {{> search}}
+    {{> ask-ai}}
+      {{> ask-ai}}
 
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
